<?xml version="1.0"?>
<package format="2">
  <name>waver_control</name>
  <version>1.0.0</version>
  <description>The waver_control package</description>

  <author email="gugomog3@gmail.com">Gustavo Gomez</author>
  <maintainer email="gugomog3@gmail.com">Gustavo Gomez</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>waver_description</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
</package>
